--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42cbd11c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe3c6bd12d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f42cb9c7510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f42cb9c7710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3c5cf4490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe3c5cf4690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f42cbf8bd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f42cbf8bf10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3c6296d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe3c6296f10&gt;]</pre>
 </div>
 
 </div>
