--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca34ffba90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdcba688710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca34cc8390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca34cc8590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdcbac56510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdcbac56710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca3526abd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca3526add0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdcbb1fcd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdcbb1fcf10&gt;]</pre>
 </div>
 
 </div>
