--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b7b515790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fce9e861950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b7b934310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b7b934510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce9ee39210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce9ee2c750&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b7bed8c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b7bed8e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce9f448e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce9f3d2fd0&gt;]</pre>
 </div>
 
 </div>
