--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0e4b48f350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f50308c3650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e4b8aa310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0e4b8aa510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f50308e51d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f50308e53d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e4be51bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0e4be51dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5030e95a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5030e95c50&gt;]</pre>
 </div>
 
 </div>
