--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f50308c3650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1cb7c64b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f50308e51d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f50308e53d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cb8061150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1cb8061350&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5030e95a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5030e95c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cb86129d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1cb8612bd0&gt;]</pre>
 </div>
 
 </div>
