--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f17a3a8afd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4bc4a04290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f17a40623d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f17a40625d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4bc3b25310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4bc3b25510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f17a460acd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f17a460aed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4bc40c8b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4bc40c8d90&gt;]</pre>
 </div>
 
 </div>
