--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f45b17a0ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4c11dd8b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f45b17730d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f45b17732d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4c10f1d350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4c10f1d550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f45b1d239d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f45b1d23bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4c114bec90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4c114bee90&gt;]</pre>
 </div>
 
 </div>
