--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2f62d79b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f233cd59250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2f62716490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2f62716690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f233d144310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f233d144510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2f62cbbd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2f62cbbf10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f233d703c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f233d703e10&gt;]</pre>
 </div>
 
 </div>
