--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fede0b091d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb1d5200e50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fede0f26490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fede0f26690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1d4eda5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1d4eda7d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fede14c8e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fede14c8fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1d547be90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1d54880d0&gt;]</pre>
 </div>
 
 </div>
