--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb1d5200e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9a5a4a2810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1d4eda5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb1d4eda7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9a5aa66390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9a5aa66590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1d547be90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb1d54880d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9a5b00cc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9a5b00ce50&gt;]</pre>
 </div>
 
 </div>
