--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2327d81d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5e0d3db310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2327d394d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2327d396d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e0cd563d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5e0cd56590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f23282dfd90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f23282dff90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5e0d2f9b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5e0d2f9d50&gt;]</pre>
 </div>
 
 </div>
