--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b83431910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efc2e446610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b825ff4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b825ff6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc2d58cd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc2d58a450&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b82ba2dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b82ba2fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc2db25710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc2db2dd90&gt;]</pre>
 </div>
 
 </div>
