--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ab063b450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca9ad65790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ab096b550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ab0615610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fca9b338590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fca9b338790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ab0c14050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ab0bbcf10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fca9b8dadd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fca9b8dafd0&gt;]</pre>
 </div>
 
 </div>
