--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2837ee8050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe054c19e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f28382ee310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f28382ee510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe053de8390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe053de8590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2838891bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2838891dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe05438bc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe05438be50&gt;]</pre>
 </div>
 
 </div>
