--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fef0b89b9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feaf979b290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef0a9b94d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef0a9b96d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feaf9bba150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feaf9bc34d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef0af60e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef0af60fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feafa15f890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feafa166dd0&gt;]</pre>
 </div>
 
 </div>
