--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6e994b5990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f289cbae390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e9977b390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6e9977b590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f289cfcb310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f289cfcb510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e99d22d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6e99d22f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f289d573b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f289d573d50&gt;]</pre>
 </div>
 
 </div>
