--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa744518850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6eba75c510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7448bd510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa7448bd6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6eba47e210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6eba47e390&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa744e5fdd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa744e5ff90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ebaa34b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6ebaa34c90&gt;]</pre>
 </div>
 
 </div>
