--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f018613f810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8210f27fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f01864e9350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f01864d2990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8211254a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8211240590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0186b09dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0186a9f2d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f82118543d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f82117e3e90&gt;]</pre>
 </div>
 
 </div>
