--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa0ad9b9650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f559984da50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0adc7e490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0adfe56d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f559952c290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f559952c490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0ae28a9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0ae232e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5599acdb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5599acdd90&gt;]</pre>
 </div>
 
 </div>
